# freeimage-cmake

./: CMakeLists--old--orgin.txt  CMakeLists.txt  README.md  freeimage_cmk_suppt_inst_Lite.txt
FreeImage_19.33.31630.0_install/include/: version.hpp
FreeImage_19.33.31630.0_install/lib/cmake/FreeImage/: FreeImageConfig.cmake  FreeImageConfigVersion.cmake  FreeImageTargets-debug.cmake  FreeImageTargets.cmake
Source/LibJXR/image/sys/: strcodec.h
TestAPI/: CMakeLists.txt
Wrapper/FreeImagePlus/test/: CMakeLists.txt
install_FreeImage_Ubun2104/lib/cmake/FreeImage/: FreeImageConfig.cmake  FreeImageTargets-debug.cmake  FreeImageTargets.cmake
src_extern_app/: CMakeLists.txt  mymathApp.cc
